content/assets/styles/_typography.scss
body {
	width: 98%;
	max-width: 40rem;
	margin: 2rem auto;
	color: $text;
	background-color: $background;
	// Boring default font list. (TODO: Think about font choice.)
	font-family: 'Ubuntu', 'Open-Sans', 'DejaVu Sans', sans-serif;
}


/* Headlines */

h1, h2, h3 {
	// TODO: Clean multiple line headlines (look at :first-line).
	font-family: 'Ubuntu Mono', monospace;
	margin: 1.7em 0 1em 0;
	// TODO: Smaller word spacings in headlines.
	// word-spacing: 0em;
}

h1 {
	font-size: 1.7em;
	margin-top: 2em;
}

h2 {
	font-size: 1.1em;
	font-weight: bold;
}

h3 {
	font-size: 0.9em;
	font-weight: bold;
}

/* Markdown Flavour for Headlines */
h1:before { content: "# "; }
h2:before { content: "## "; }
h3:before { content: "### "; }


/* Body Text */

p, li, pre, form, figure {
	line-height: 1.4;
	margin-top: 0.9em;
}

i, em, u {
	font-style: italic;
}

b, strong {
	font-weight: bold;
}

blockquote {
	font-size: 0.9em;
	padding-left: 1.1em;
	border-left: $delimiter solid thin;
}

/* Links */

a {
	color: $link;
	border-bottom: $link-hover dotted thin;
}

h1 a, h2 a, h3 a,
a:visited {
	color: $link-hover;
}

a:hover,
a:focus {
	color: $link-hover;
	border-bottom: $text solid thin;
}

h1 a:hover, h2 a:hover, h3 a:hover,
a:visited:hover {
	color: $link;
}

/* Bilder */

img {
	max-width: 100%;
	height: auto;
	border-radius: 3px;
}

figcaption {
	margin: 0.3em 0 1.3em 0;
	padding-left: 1.1em;
	color: $text-secondary;
}

/* Listen */

ul, ol {
	padding-left: 1.1em;
}

ul li {
	list-style-type: disc;
}

ol li {
	list-style-type: decimal;
}


/* Code and Pre Elements */

code {
	background-color: $background-pre;
	font-family: 'Ubuntu Mono', monospace;
}

pre {
	padding: 0.9em 1.1em;
	background-color: $background-pre;
	border-top:    $delimiter thin solid;
	border-bottom: $delimiter thin solid;
}


/* Form Elements */

// TODO: Add better looking and more general design for form elements.

input {
	color: $delimiter;
	background: $background;
	width: 70%;
	padding: 0.3em 0.5em;
	border: none;
	border-top:    $delimiter thin solid;
	border-bottom: $delimiter thin solid;
}

input[type=submit] {
	color: $background;
	background-color: $link;
	width: 20%;
	cursor: pointer;
	border-radius: 3px;
}

input[type=submit]:hover {
	background-color: $link-hover;
}

input[type=text]:focus {
	border-top:    $delimiter thin solid;
	border-bottom: $delimiter thin solid;
}

/* Sonstiges */

hr {
	margin: 1.4em 0;
	height: 1px;
	border: none;
	color: $delimiter;
	background-color: $delimiter;
}

